# b1-method

./: README.md  b1_colab.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
b1_method/: __init__.py  __main__.py  cli.py  core.py  io.py  temporal.py
b1_method/examples/: brand_alignment.csv  brand_sources.csv  colour_alignment.csv  colour_sources.csv  emotion_alignment.csv  emotion_sources.csv  intelligence_alignment.csv  intelligence_sources.csv  personality_alignment.csv  personality_sources.csv  taste_alignment.csv  taste_sources.csv
b1_method/tests/: __init__.py  test_core.py
